tests/snapshots/test__from_fixtures@any_of__order_change.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    anyOf:
      - type: array
      - type: string
  rhs:
    anyOf:
      - type: string
      - type: array
input_file: tests/fixtures/any_of/order_change.json
---
[]
