tests/snapshots/test__from_fixtures@any_of__to_equivalent_type.json.snap
---
source: tests/test.rs
expression: diff
input_file: tests/fixtures/any_of/to_equivalent_type.json
---
[]
