tests/snapshots/test__from_fixtures@any_of__to_less_strict_type.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    anyOf:
      - type: integer
  rhs:
    type:
      - integer
      - string
input_file: tests/fixtures/any_of/to_less_strict_type.json
---
[
    Change {
        path: "",
        change: TypeAdd {
            added: String,
        },
    },
]
