tests/snapshots/test__from_fixtures@any_of__to_more_strict_type.json.snap
---
source: tests/test.rs
expression: diff
input_file: tests/fixtures/any_of/to_more_strict_type.json
---
[
    Change {
        path: "",
        change: TypeRemove {
            removed: Integer,
        },
    },
]
