tests/snapshots/test__from_fixtures@any_of__type_to_equivalent_any_of.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    type: integer
  rhs:
    anyOf:
      - type: integer
input_file: tests/fixtures/any_of/type_to_equivalent_any_of.json
---
[]
