tests/snapshots/test__from_fixtures@any_of__type_to_more_strict_any_of.json.snap
---
source: tests/test.rs
expression: diff
input_file: tests/fixtures/any_of/type_to_more_strict_any_of.json
---
[
    Change {
        path: "",
        change: TypeAdd {
            added: String,
        },
    },
]
